Make device chooser size not larger than underlying window on Chrome apps

When the size of the device chooser window is larger than the underlying
Chrome app's window, clicking the buttons on the chooser  causes the
Chrome app window to move to the background and the chooser doesn't close
unless the Chrome app window is closed. This CL modifies the chooser
related code to make the chooser size not larger than the underlying
Chrome app's window. By doing this, the buttons and links on the chooser
work properly.

I uploaded some chooser screenshots on the following issue page.

Bug: 751819
Change-Id: I1c89c3ea986fb2e85bbda7d49874b803ae01ed5e